# test_moi

./: .dockerignore  .env.exemple  .gitignore  CLAUDE.md  Dockerfile  EXEMPLES_PROMPTS.md  ElevenLabs.ipynb  GRIDSEARCH_CONFIG_GUIDE.md  GRIDSEARCH_GUIDE.md  GRIDSEARCH_NARRATIVE_GUIDE.md  GRIDSEARCH_QUICKSTART.md  GROQ_IMPLEMENTATION.md  GUIDE_GROQ.md  LANCER_GRIDSEARCH.md  README.md  README_TESTS.md  SETUP_UV.md  agents.md  analyze_gridsearch.py  check_groq.py  check_imports.py  check_ollama.py  cli.py  config.json  docker-entrypoint.sh  documentation_technique_v1.md  env.example  for_me.txt  graph.html  gridsearch_config.py  gridsearch_groq.py  gridsearch_local.py  hidden_makepush.txt  main.py  main_local.py  makefile  orchestrator.py  package-lock.json  package.json  pyproject.toml  (+5 more)
.cursor/rules/: design-system.mdc
agents/: __init__.py
agents/agent_0_request_parser/: __init__.py  parser.py  skill.md
agents/agent_1_structure/: __init__.py  skill.md  structure.py
agents/agent_2_writing/: __init__.py  skill.md  writer.py
agents/agent_3_production/: __init__.py  production.py  skill.md
agents/utils/: __init__.py  user_constraints.py
app/: Dockerfile  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx  styles.css
audio_romu/audio_analyse/: analyse_audio.ipynb  analyse_audio.py
audio_romu/discours/: test.txt
config/: __init__.py  chantiers_navals_config.json  default_config.json  gilles_hamon_config.json  gilles_hamon_gemini.json  model_registry.py  step_config.json  test_gemini_config.json
data/sessions/: 09c21fb9-4be8-48a3-a0db-0618e472617d.json  133beeda-1004-4110-82fe-daae45802750.json  152b1c68-917b-4f1c-9cb5-8ef977b05ea1.json  21d51ab4-4019-4991-9be7-e8fcc2143db1.json  240f37aa-6d00-40fc-881c-26697e0dae09.json  25284b12-04ee-4d77-889e-d21fc0f8b177.json  2ceac2fd-f06f-4792-a10b-24deaca537a6.json  2da5a763-3116-4ea6-9423-8f5e7393db36.json  3552348e-e69f-48aa-8d8f-f61a15c1f0c7.json  38a0383f-2ed0-4b25-8ff8-78006bd386ae.json  40e3408d-4edc-4569-b416-d3c1e5a0cc5a.json  547d55a4-4a82-40f7-8c9a-0c2af1754631.json  62d416dc-6245-4f2a-97bf-1bdea799fa75.json  65dd2712-7d2a-4fc9-8a32-39b73f8d3ccb.json  6da71d06-2d8c-4a27-b654-e8a8796074e7.json  74a1660d-0dd9-4842-8bc0-72566fa71de3.json  77c031e6-5a9c-4981-beef-6f2d2478a7ac.json  8321a22b-d56d-4687-b8b5-562c8d6a2b53.json  87b17af7-8fbb-4225-aa15-018fd8e03eeb.json  8e9f1283-9fc2-45f4-9b37-d58300a74365.json  968a9214-4125-49ca-9d2d-ec13cd43ff9d.json  98004684-3701-42d8-805b-cb21a0e61ade.json  Demo4_files.json  Demo5_files.json  (+10 more)
docs/: COMMENT_LLM_CONTROLE_UI.md  DESIGN_SYSTEM.md  PROJECT_OVERVIEW.md  agent-ui-integration.md
dump/: docker-compose.yml
scripts/: download_qwen_tts.py  enrich_sound_index.py  init_sound_library.py  validate_sources.py
skills/: __init__.py
src/: project_store.py
tests/: __init__.py  conftest.py  test_agent_0.py  test_agent_1.py  test_audio_tools.py  test_chat_agent.py  test_get_audio_info.py  test_orchestrator.py  test_scenario_ranking.py  test_session_store.py  test_skills.py  test_text_to_speech.py  test_utils.py
utils/: __init__.py  claude_client.py  groq_client.py  logger.py  ollama_client.py  skill_loader.py  validators.py  wikipedia_fetcher.py
(+674 files in other folders)
