[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoire-territoires"
version = "1.0.0"
description = "Système de génération automatique d'archives audio historiques enrichies"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Mémoire des Territoires Team"}
]
keywords = ["ai", "claude", "audio", "history", "archives"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pymongo>=4.6.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
audio = [
    "openai-whisper>=20231117",
]

[project.scripts]
memoire-territoires = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agents", "skills", "models", "utils"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=agents --cov=skills --cov=utils --cov-report=html"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
