[project]
name = "memoiredesterritoires"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.76.0",
    "claude-agent-sdk>=0.1.20",
    "faster-whisper>=1.2.1",
    "huggingface-hub[cli]>=0.34,<1.0",
    "openai>=2.15.0",
    "qwen-tts>=0.0.5",
    "torch>=2.10.0",
    "duckdb>=1.0.0",
    "pydub>=0.25.1",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pandas>=2.2.0",
    "elevenlabs>=2.34.0",
]
